--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-s3": "^2.0.5",
     "aws-sdk": "^2.681.0",
     "axios": "^0.19.0",
+    "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -32,6 +33,8 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
+    "qs": "^6.9.4",
+    "querystring": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
