--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/register": "^7.5.5",
     "@material-ui/core": "^4.10.0",
+    "@sendgrid/mail": "^7.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "qs": "^6.9.4",
     "querystring": "^0.2.0",
@@ -45,7 +47,8 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
-    "three": "^0.116.1"
+    "three": "^0.116.1",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
