--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "global": "^4.4.0",
     "helmet": "^3.21.0",
     "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
