--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "flatted": "^2.0.2",
+    "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "helmet": "^3.21.0",
     "http": "^0.0.1-security",
